[gd_scene load_steps=4 format=3 uid="uid://b8gq0s6857rkh"]

[ext_resource type="FontFile" path="res://assets/fonts/text.tres" id="1"]
[ext_resource type="Script" path="res://scenes/ui/settings/input_remap_dialog.gd" id="2"]

[sub_resource type="Theme" id="1"]
default_font = ExtResource("1")

[node name="InputRemapDialog" type="Window"]
position = Vector2i(0, 36)
size = Vector2i(590, 275)
exclusive = true
min_size = Vector2i(590, 275)
theme = SubResource("1")
script = ExtResource("2")

[node name="MarginContainer" type="MarginContainer" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
mouse_filter = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
alignment = 1

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 1
text = ". . . Press key, mouse button or game pad button"
horizontal_alignment = 1

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 0

[node name="CancelBtn" type="Button" parent="MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
focus_mode = 0
text = "Cancel"

[connection signal="close_requested" from="." to="." method="_on_close_requested"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/HBoxContainer/CancelBtn" to="." method="_on_CancelBtn_pressed"]
